[tool.poetry]
name = "EigenLedger"
authors = ["Santosh <santoshpassoubadyp@gmail.com>"]
version = "2.1.6"
description = "EigenLedger + PMS Feature"
readme = "README.md"
license = "LICENSE"
homepage = "https://github.com/chaipat-ncm/EigenLedger-CW"

[tool.poetry.dependencies]
python = ">=3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
quantstats = "^0.0.62"
yfinance = "^0.1.0"
ipython = "^7.16.0"
fpdf = "^1.7.2"
pyportfolioopt = "^1.4.0"

[[tool.poetry.packages]]
include = "EigenLedger"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

